# trial_HGAD

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/Source/JavaScriptCore/: CMakeLists.txt
app/Source/JavaScriptCore/inspector/: JSGlobalObjectInspectorController.cpp
app/Source/JavaScriptCore/runtime/: DatePrototype.cpp
app/Source/WTF/icu/unicode/: ubrk.h  utext.h
app/Source/WTF/wtf/: Assertions.cpp  Hasher.h  ThreadIdentifierDataPthreads.cpp  dtoa.h
app/Source/WTF/wtf/text/: ASCIIFastPath.h  AtomicStringImpl.cpp  LineBreakIteratorPoolICU.h  StringBuffer.h  StringCommon.h  StringImpl.cpp  StringImpl.h  StringView.cpp  StringView.h  TextBreakIterator.cpp  TextBreakIterator.h
app/Source/WTF/wtf/text/icu/: TextBreakIteratorICU.h  UTextProvider.h  UTextProviderLatin1.h  UTextProviderUTF16.h
app/Source/WTF/wtf/unicode/: CharacterNames.h  Collator.h  UTF8.h
app/Source/WTF/wtf/unicode/icu/: CollatorICU.cpp
app/Source/cmake/: OptionsGTK.cmake  WebKitCommon.cmake
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/c/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
gradle/wrapper/: gradle-wrapper.properties
